[package]
name = "is-number-rs"
version = "0.1.0"
edition = "2024"
description = "Finally, a WebAssembly-powered solution to the age-old question: is it a number?"
license = "MIT"
repository = "https://github.com/yourusername/is-number-rs"
keywords = ["wasm", "number", "validation", "is-number", "javascript"]
categories = ["wasm", "web-programming"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"